# KeibaAI

./: .gitignore  CODING_STANDARDS.md  README.md  model_features.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.cursor/rules/: code-quality.mdc  coding-standards.mdc  git-workflow.mdc  project-structure.mdc  version-control.mdc
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
model_history/: evaluation_20250429_184831.json  evaluation_20250429_190040.json  evaluation_20250429_190640.json  evaluation_20250430_183012.json  evaluation_20250430_185225.json  evaluation_20250430_193659.json  evaluation_20250430_200703.json  evaluation_20250430_202602.json  evaluation_20250430_204536.json  evaluation_20250430_210853.json  evaluation_20250430_220512.json  evaluation_20250430_222634.json  evaluation_20250430_223616.json
scripts/: setup_dev_tools.sh
src/app/: main.py
src/data_collection/: collect_odds_data.py  collect_race_data.py  load_race_data.py
src/features/: __init__.py  feature_generator.py
src/prediction/: catboost_model.py  evaluate_model.py  model.py  simple_model.py
src/utils/: logger.py  test_file.py  update_readme.py
tests/: test_compatibility.py  test_simple_model.py  test_utils.py
