[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keiba_ai"
version = "0.1.0"
authors = [
  { name="KeibaAI Developer" },
]
description = "Horse racing prediction using machine learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "requests",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.hatch.build.targets.wheel]
packages = ["src"] 